--- a/Terrarium/prototypes/SimulationView/SimulationView.csproj
+++ b/Terrarium/prototypes/SimulationView/SimulationView.csproj
@@ -68,7 +68,12 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\Entity.cs" />
+    <Compile Include="Model\EntityExtensions.cs" />
+    <Compile Include="Model\Part.cs" />
+    <Compile Include="Model\PartKind.cs" />
     <Compile Include="Model\Simulation.cs" />
+    <Compile Include="Model\Vector2D.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
