--- a/Terrarium/prototypes/SimulationView/SimulationView.csproj
+++ b/Terrarium/prototypes/SimulationView/SimulationView.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Renderer.cs" />
     <Compile Include="SimulationDisplay.cs" />
     <Compile Include="VectorExtensions.cs" />
+    <Compile Include="ZoomBorder.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
