in the process of moving simulation stuff away into separate library and make it independent of any graphics libraries (unfortunately, that also involves rolling our own Vector2D because the System.Numeric.Vector2 does not seem to play nicely with UWP or with MonoGame - just referencing the library results in a very weird stackoverflow crash when starting the application

--- a/Terrarium/prototypes/SimulationView/SimulationView.csproj
+++ b/Terrarium/prototypes/SimulationView/SimulationView.csproj
@@ -42,6 +42,11 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Numerics.Vectors, Version=4.1.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\System.Numerics.Vectors.4.4.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
+    </Reference>
     <Reference Include="System.ValueTuple, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\..\packages\System.ValueTuple.4.4.0\lib\net461\System.ValueTuple.dll</HintPath>
     </Reference>
@@ -64,11 +69,9 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Model\Simulation.cs" />
-    <Compile Include="Model\SimulationTicker.cs" />
     <Compile Include="Renderer.cs" />
     <Compile Include="SimulationDisplay.cs" />
     <Compile Include="TracingWatch.cs" />
-    <Compile Include="VectorExtensions.cs" />
     <Compile Include="ZoomBorder.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -84,11 +87,6 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\Entity.cs" />
-    <Compile Include="Model\EntityExtensions.cs" />
-    <Compile Include="Model\Part.cs" />
-    <Compile Include="Model\PartKind.cs" />
-    <Compile Include="Model\SimulationState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -114,6 +112,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\ModernRonin.Terrarium.Logic\ModernRonin.Terrarium.Logic.csproj">
+      <Project>{d50f8002-abf8-4570-bb1c-d05b10c00846}</Project>
+      <Name>ModernRonin.Terrarium.Logic</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
