--- a/Terrarium/prototypes/SimulationView/packages.config
+++ b/Terrarium/prototypes/SimulationView/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="ModernRonin.PraeterArtem" version="1.3.1" targetFramework="net462" />
   <package id="morelinq" version="2.8.0" targetFramework="net462" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net462" />
 </packages>
