--- a/Terrarium/ModernRonin.Terrarium.Logic/ModernRonin.Terrarium.Logic.csproj
+++ b/Terrarium/ModernRonin.Terrarium.Logic/ModernRonin.Terrarium.Logic.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="morelinq" Version="2.8.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ModernRonin.Standard\ModernRonin.Standard.csproj" />
+  </ItemGroup>
+
 </Project>
