--- a/Terrarium/prototypes/MonoGameUwpXaml/MonoGameUwpXaml.csproj
+++ b/Terrarium/prototypes/MonoGameUwpXaml/MonoGameUwpXaml.csproj
@@ -140,6 +140,16 @@
       <Version>3.6.0.1625</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\ModernRonin.Standard\ModernRonin.Standard.csproj">
+      <Project>{dc8cca68-8837-4f10-8b61-523365cf9996}</Project>
+      <Name>ModernRonin.Standard</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\ModernRonin.Terrarium.Logic\ModernRonin.Terrarium.Logic.csproj">
+      <Project>{d50f8002-abf8-4570-bb1c-d05b10c00846}</Project>
+      <Name>ModernRonin.Terrarium.Logic</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
