--- a/Terrarium/prototypes/MonoGameUwpXaml/MonoGameUwpXaml.csproj
+++ b/Terrarium/prototypes/MonoGameUwpXaml/MonoGameUwpXaml.csproj
@@ -97,6 +97,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Camera.cs" />
     <Compile Include="GamePage.xaml.cs">
       <DependentUpon>GamePage.xaml</DependentUpon>
     </Compile>
