--- a/Terrarium/ModernRonin.Terrarium.Client.Windows/ModernRonin.Terrarium.Client.Windows.csproj
+++ b/Terrarium/ModernRonin.Terrarium.Client.Windows/ModernRonin.Terrarium.Client.Windows.csproj
@@ -99,6 +99,7 @@
     <Compile Include="AutofacExtensions.cs" />
     <Compile Include="DebugLogger.cs" />
     <Compile Include="ISampleService.cs" />
+    <Compile Include="NullLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\ShellViewModel.cs" />
     <Compile Include="Views\ShellView.xaml.cs">
