--- a/Terrarium/ModernRonin.Terrarium.Client.Windows/ModernRonin.Terrarium.Client.Windows.csproj
+++ b/Terrarium/ModernRonin.Terrarium.Client.Windows/ModernRonin.Terrarium.Client.Windows.csproj
@@ -138,12 +138,25 @@
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.0.2</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls">
+      <Version>2.1.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Page Include="Views\ShellView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ModernRonin.Standard\ModernRonin.Standard.csproj">
+      <Project>{dc8cca68-8837-4f10-8b61-523365cf9996}</Project>
+      <Name>ModernRonin.Standard</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ModernRonin.Terrarium.Logic\ModernRonin.Terrarium.Logic.csproj">
+      <Project>{d50f8002-abf8-4570-bb1c-d05b10c00846}</Project>
+      <Name>ModernRonin.Terrarium.Logic</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
