--- a/Terrarium/ModernRonin.Terrarium.Client.Windows/ModernRonin.Terrarium.Client.Windows.csproj
+++ b/Terrarium/ModernRonin.Terrarium.Client.Windows/ModernRonin.Terrarium.Client.Windows.csproj
@@ -19,7 +19,7 @@
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WindowsXamlEnableOverview>true</WindowsXamlEnableOverview>
     <PackageCertificateKeyFile>ModernRonin.Terrarium.Client.Windows_TemporaryKey.pfx</PackageCertificateKeyFile>
-	<MonoGamePlatform>WindowsStoreApp</MonoGamePlatform>
+    <MonoGamePlatform>WindowsStoreApp</MonoGamePlatform>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
@@ -99,6 +99,7 @@
     </Compile>
     <Compile Include="ApplicationSetup.cs" />
     <Compile Include="AutofacExtensions.cs" />
+    <Compile Include="Camera.cs" />
     <Compile Include="DebugLogger.cs" />
     <Compile Include="ISampleService.cs" />
     <Compile Include="NullLogger.cs" />
@@ -124,7 +125,7 @@
     <Content Include="Assets\StoreLogo.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
   </ItemGroup>
-    <ItemGroup>
+  <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
   </ItemGroup>
   <ItemGroup>
