--- a/Terrarium/ModernRonin.Terrarium.Client.Windows/ModernRonin.Terrarium.Client.Windows.csproj
+++ b/Terrarium/ModernRonin.Terrarium.Client.Windows/ModernRonin.Terrarium.Client.Windows.csproj
@@ -101,7 +101,6 @@
     <Compile Include="AutofacExtensions.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="DebugLogger.cs" />
-    <Compile Include="ISampleService.cs" />
     <Compile Include="NullLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\ShellViewModel.cs" />
@@ -165,6 +164,10 @@
     <ProjectReference Include="..\ModernRonin.Terrarium.Logic\ModernRonin.Terrarium.Logic.csproj">
       <Project>{d50f8002-abf8-4570-bb1c-d05b10c00846}</Project>
       <Name>ModernRonin.Terrarium.Logic</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ModernRonin.Terrarium.Rendering.Windows\ModernRonin.Terrarium.Rendering.Windows.csproj">
+      <Project>{4fb64cf4-a57f-4c66-94ed-16df8b20021d}</Project>
+      <Name>ModernRonin.Terrarium.Rendering.Windows</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
