--- a/Terrarium/ModernRonin.Terrarium.Logic/ModernRonin.Terrarium.Logic.csproj
+++ b/Terrarium/ModernRonin.Terrarium.Logic/ModernRonin.Terrarium.Logic.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.6.2" />
     <PackageReference Include="morelinq" Version="2.8.0" />
   </ItemGroup>
 
