--- a/Terrarium/ModernRonin.Terrarium.Rendering.Windows/ModernRonin.Terrarium.Rendering.Windows.csproj
+++ b/Terrarium/ModernRonin.Terrarium.Rendering.Windows/ModernRonin.Terrarium.Rendering.Windows.csproj
@@ -108,6 +108,8 @@
   <ItemGroup>
     <Compile Include="Camera.cs" />
     <Compile Include="CameraController.cs" />
+    <Compile Include="KeyboardDelta.cs" />
+    <Compile Include="MouseDelta.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimulationView.xaml.cs">
       <DependentUpon>SimulationView.xaml</DependentUpon>
