--- a/Terrarium/ModernRonin.Terrarium.Rendering.Windows/ModernRonin.Terrarium.Rendering.Windows.csproj
+++ b/Terrarium/ModernRonin.Terrarium.Rendering.Windows/ModernRonin.Terrarium.Rendering.Windows.csproj
@@ -114,6 +114,7 @@
     <Compile Include="SimulationView.xaml.cs">
       <DependentUpon>SimulationView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="TextureDirectory.cs" />
     <Compile Include="Vector2DExtensions.cs" />
     <Compile Include="VisualSimulation.cs" />
     <EmbeddedResource Include="Properties\ModernRonon.Terrarium.Rendering.Windows.rd.xml" />
