--- a/Terrarium/ModernRonin.Standard.Tests/ModernRonin.Standard.Tests.csproj
+++ b/Terrarium/ModernRonin.Standard.Tests/ModernRonin.Standard.Tests.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="4.19.4" />
+    <PackageReference Include="NSubstitute" Version="3.1.0" />
+    <PackageReference Include="NUnit" Version="3.9.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ModernRonin.Standard\ModernRonin.Standard.csproj" />
   </ItemGroup>
 
