Part and Entity now create a string Code which can be used to see whether two Entities are equal in regards to their parts

--- a/Terrarium/ModernRonin.Terrarium.Client.Windows/ModernRonin.Terrarium.Client.Windows.csproj
+++ b/Terrarium/ModernRonin.Terrarium.Client.Windows/ModernRonin.Terrarium.Client.Windows.csproj
@@ -3,6 +3,7 @@
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Common.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
+    <BuildForLiveUnitTesting>false</BuildForLiveUnitTesting>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProjectGuid>{E50D6E84-1260-4B0F-A426-B84B958568B9}</ProjectGuid>
