* added Entity.BoundingBox * renamed our .Should()s to .OughtTo() to avoid the import conflict with the standard .Should()s

--- a/Terrarium/ModernRonin.Standard.Tests/ModernRonin.Standard.Tests.csproj
+++ b/Terrarium/ModernRonin.Standard.Tests/ModernRonin.Standard.Tests.csproj
@@ -65,6 +65,7 @@
     <Compile Include="AdditionalAssertionExtensions.cs" />
     <Compile Include="FloatAssertions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RectangleAssertions.cs" />
     <Compile Include="RectangleTests.cs" />
     <Compile Include="Vector2DAssertions.cs" />
     <Compile Include="Vector2DTests.cs" />
