--- a/Terrarium/ModernRonin.Standard.Tests/ModernRonin.Standard.Tests.csproj
+++ b/Terrarium/ModernRonin.Standard.Tests/ModernRonin.Standard.Tests.csproj
@@ -66,7 +66,7 @@
     <Compile Include="FloatAssertions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RectangleAssertions.cs" />
-    <Compile Include="RectangleTests.cs" />
+    <Compile Include="Rectangle2DTests.cs" />
     <Compile Include="Vector2DAssertions.cs" />
     <Compile Include="Vector2DTests.cs" />
   </ItemGroup>
