--- a/Terrarium/ModernRonin.Terrarium.Rendering.Windows/ModernRonin.Terrarium.Rendering.Windows.csproj
+++ b/Terrarium/ModernRonin.Terrarium.Rendering.Windows/ModernRonin.Terrarium.Rendering.Windows.csproj
@@ -107,9 +107,13 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="ARenderer.cs" />
+    <Compile Include="BackgroundRenderer.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="CameraController.cs" />
     <Compile Include="DebugHelpers.cs" />
+    <Compile Include="EnergyDensityRenderer.cs" />
+    <Compile Include="EntityRenderer.cs" />
     <Compile Include="EntitySpriteFactory.cs" />
     <Compile Include="KeyboardDelta.cs" />
     <Compile Include="MouseDelta.cs" />
