--- a/Terrarium/ModernRonin.Terrarium.Client.Windows/ModernRonin.Terrarium.Client.Windows.csproj
+++ b/Terrarium/ModernRonin.Terrarium.Client.Windows/ModernRonin.Terrarium.Client.Windows.csproj
@@ -100,10 +100,10 @@
     </Compile>
     <Compile Include="ApplicationSetup.cs" />
     <Compile Include="AutofacExtensions.cs" />
-    <Compile Include="Camera.cs" />
     <Compile Include="DebugLogger.cs" />
     <Compile Include="NullLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UwpClientModule.cs" />
     <Compile Include="ViewModels\ShellViewModel.cs" />
     <Compile Include="Views\ShellView.xaml.cs">
       <DependentUpon>ShellView.xaml</DependentUpon>
