--- a/Terrarium/ModernRonin.Terrarium.Rendering.Windows/ModernRonin.Terrarium.Rendering.Windows.csproj
+++ b/Terrarium/ModernRonin.Terrarium.Rendering.Windows/ModernRonin.Terrarium.Rendering.Windows.csproj
@@ -113,6 +113,8 @@
     <Compile Include="Interaction\Camera.cs" />
     <Compile Include="Interaction\CameraController.cs" />
     <Compile Include="Interaction\ICameraController.cs" />
+    <Compile Include="Interaction\IPicker.cs" />
+    <Compile Include="Interaction\Picker.cs" />
     <Compile Include="Utilities\DebugHelpers.cs" />
     <Compile Include="Drawing\EnergyDensityRenderer.cs" />
     <Compile Include="Drawing\EntityRenderer.cs" />
