--- a/Terrarium/ModernRonin.Terrarium.Rendering.Windows/ModernRonin.Terrarium.Rendering.Windows.csproj
+++ b/Terrarium/ModernRonin.Terrarium.Rendering.Windows/ModernRonin.Terrarium.Rendering.Windows.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Interaction\ICameraController.cs" />
     <Compile Include="Interaction\IPicker.cs" />
     <Compile Include="Interaction\Picker.cs" />
+    <Compile Include="IUpdateable.cs" />
     <Compile Include="Utilities\DebugHelpers.cs" />
     <Compile Include="Drawing\EnergyDensityRenderer.cs" />
     <Compile Include="Drawing\EntityRenderer.cs" />
