--- a/Terrarium/ModernRonin.Standard.Tests/ModernRonin.Standard.Tests.csproj
+++ b/Terrarium/ModernRonin.Standard.Tests/ModernRonin.Standard.Tests.csproj
@@ -63,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdditionalAssertionExtensions.cs" />
+    <Compile Include="ARandomityTests.cs" />
     <Compile Include="FloatAssertions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RectangleAssertions.cs" />
