--- a/Terrarium/ModernRonin.Terrarium.Logic.Tests/ModernRonin.Terrarium.Logic.Tests.csproj
+++ b/Terrarium/ModernRonin.Terrarium.Logic.Tests/ModernRonin.Terrarium.Logic.Tests.csproj
@@ -64,7 +64,7 @@
   <ItemGroup>
     <Compile Include="Array2DExtensions.cs" />
     <Compile Include="EnergySourceTests.cs" />
-    <Compile Include="EntityTests.cs" />
+    <Compile Include="EntityStateTests.cs" />
     <Compile Include="PartTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
