--- a/Terrarium/ModernRonin.Standard.Tests/ModernRonin.Standard.Tests.csproj
+++ b/Terrarium/ModernRonin.Standard.Tests/ModernRonin.Standard.Tests.csproj
@@ -64,6 +64,7 @@
   <ItemGroup>
     <Compile Include="AdditionalAssertionExtensions.cs" />
     <Compile Include="ARandomityTests.cs" />
+    <Compile Include="DependentExtensionsTests.cs" />
     <Compile Include="FloatAssertions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RectangleAssertions.cs" />
