--- a/Terrarium/ModernRonin.Terrarium.Logic/ModernRonin.Terrarium.Logic.csproj
+++ b/Terrarium/ModernRonin.Terrarium.Logic/ModernRonin.Terrarium.Logic.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.6.2" />
     <PackageReference Include="morelinq" Version="2.8.0" />
+    <PackageReference Include="System.Collections.Immutable" Version="1.4.0" />
   </ItemGroup>
 
   <ItemGroup>
