--- a/Terrarium/ModernRonin.Terrarium.Logic.Tests/ModernRonin.Terrarium.Logic.Tests.csproj
+++ b/Terrarium/ModernRonin.Terrarium.Logic.Tests/ModernRonin.Terrarium.Logic.Tests.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Array2DExtensions.cs" />
     <Compile Include="EnergySourceTests.cs" />
     <Compile Include="Objects\Entities\EntityStateTests.cs" />
+    <Compile Include="Objects\Entities\GenomeTests.cs" />
     <Compile Include="Objects\Entities\PartTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimulationStateTests.cs" />
