--- a/Terrarium/ModernRonin.Terrarium.Logic/ModernRonin.Terrarium.Logic.csproj
+++ b/Terrarium/ModernRonin.Terrarium.Logic/ModernRonin.Terrarium.Logic.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\ModernRonin.Standard\ModernRonin.Standard.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Transformations\Execution\" />
+  </ItemGroup>
+
 </Project>
