--- a/Terrarium/ModernRonin.Terrarium.Logic.Tests/ModernRonin.Terrarium.Logic.Tests.csproj
+++ b/Terrarium/ModernRonin.Terrarium.Logic.Tests/ModernRonin.Terrarium.Logic.Tests.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Transformations\EntityPartsEnergyCostTransformerTests.cs" />
     <Compile Include="Transformations\EntityResetTickEnergyTransformerTests.cs" />
     <Compile Include="Transformations\Execution\RotateThrustersExecutorTests.cs" />
+    <Compile Include="Transformations\Execution\ToggleThrustersExecutorTests.cs" />
     <Compile Include="Transformations\RemoveEntitiesWithNegativeTickEnergyTransformerTests.cs" />
     <Compile Include="Transformations\TransformerDependenciesTests.cs" />
     <Compile Include="Utilities\ModelExtensionsTests.cs" />
